# django-crawl

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  README.rst  pyproject.toml  tox.ini
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: main.yml
docs/: api.rst  changelog.rst  cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/: lib.rs
src/django_crawl/: __init__.py  _extract.pyi  crawler.py
src/django_crawl/ext/: argparse.py  html.py  xml.py
src/django_crawl/management/commands/: crawl.py
tests/: settings.py  test_crawl.py  test_crawler.py  test_init.py  urls.py  utils.py
tests/ext/: test_argparse.py  test_html.py  test_xml.py
